--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,12 @@ description: this may not go anywhere
 author: todd beckman
 dependencies:
   browser: ^0.10.0
+  color: ^2.0.1
+  over_react: ^1.8.0
   uuid: ^0.5.3
-  over_react: any
-  w_module: ^1.0.0
+  w_common: ^1.4.1
+  w_module: ^1.2.1
+  w_flux: ^2.7.0
 
 dev_dependencies:
   test: ^0.12.20
